# goit-ds-hw-3

Exersice_1/: pyproject.toml
Exersice_1/work_with_mongodb/: main.py
Exersice_2/: authors.json  pyproject.toml
Exersice_2/scraping_work/: main.py
